--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,47 @@
-version: '3'
+version: '3.8'
+
 services:
   mongodb:
-    image: mongo
+    image: mongo:latest
     ports:
-      - 27017:27017
+      - "27017:27017"
     environment:
-      MONGO_INITDB_DATABASE: db
-      MONGO_INITDB_ROOT_USERNAME: username
-      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
     volumes:
       - mongodb_data:/data/db
-  mongoui:
-    image: mongo-express
+    networks:
+      - bridged
+
+  server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
     ports:
-      - 8081:8081
+      - "8080:8080"
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: username
-      ME_CONFIG_MONGODB_ADMINPASSWORD: password
-      ME_CONFIG_MONGODB_URL: mongodb://username:password@mongodb:27017/
-      ME_CONFIG_BASICAUTH: false
+      - DB_URI=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongodb:27017/${MONGO_DATABASE}?authSource=admin
+    depends_on:
+      - mongodb
+    networks:
+      - bridged
+    env_file:
+      - .env
+
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+    depends_on:
+      - server
+    networks:
+      - bridged
+
 volumes:
   mongodb_data:
+
+networks:
+  bridged:
