--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,22 +1,19 @@
 # Build stage
 FROM golang:1.22-alpine AS builder
 
-# Install build dependencies
-RUN apk add --no-cache gcc musl-dev
-
 WORKDIR /app
 
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN CGO_ENABLED=1 GOOS=linux go build -o main .
+RUN CGO_ENABLED=0 GOOS=linux go build -o main .
 
 # Final stage
 FROM alpine:latest
 
 # Install runtime dependencies
-RUN apk --no-cache add ca-certificates libc6-compat
+RUN apk --no-cache add ca-certificates
 
 WORKDIR /root/
 
